waves fix align bottom

--- a/src/Pages/login1/login1.scss
+++ b/src/Pages/login1/login1.scss
@@ -114,7 +114,7 @@
     .waves {
         width: 100%;
         background-color: inherit;
-        margin-bottom: -0.53rem;
+        margin-bottom: -0.43rem;
         max-height: 111px;
     }
     .parallax > use {
